# Aram-trade-management-system

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  BACKTEST_README.md  README.md  SETUP_GUIDE.md  app.py  copilot-instructions.md  extract_docx.py  extracted_docx.txt  main.py  pyproject.toml  requirements.txt  test_wc.py
.claude/: CLAUDE.md
.claude/skills/: backtesting.md  dashboard-development.md  data-management.md  dhanhq-integration.md  indian-markets.md  professional-system-manager.md  risk-management.md  strategy-development.md
.github/: CODEOWNERS  pull_request_template.md
.github/agents/: backtest-debugger.agent.md  data-analyst.agent.md  master-agent.agent.md  perf-optimizer.agent.md  strategy-dev.agent.md
.github/hooks/: pre-post-hooks.json
.github/instructions/: backtester.instructions.md  portfolio.instructions.md  strategies.instructions.md
.github/prompts/: analyze-backtest.prompt.md  backtest-strategy.prompt.md  debug-portfolio.prompt.md  explore-data.prompt.md  profile-backtest.prompt.md
.github/skills/backtesting/: SKILL.md
.github/skills/data-analysis/: SKILL.md
.github/skills/performance-optimization/: SKILL.md
.github/workflows/: ci.yml
backtest_system/: .env.example  app.py  main.py  pyproject.toml
backtest_system/config/: execution.toml.example  logging.yaml  risk_limits.toml
backtest_system/core/: __init__.py  backtester.py  costs.py  data_handler.py  indicators.py  portfolio.py  strategy.py
backtest_system/data/: RELIANCE_trades.csv
backtest_system/strategies/: __init__.py  intraday_momentum_strategy.py  sample_strategy.py
backtest_system/tests/: test_strategy_contract.py
config/: backtest.toml  logging.yaml  settings.yaml
core/: backtester.py  costs.py  data_handler.py  env_utils.py  indicators.py  portfolio.py
docs/: IMPLEMENTATION_PLAN.md
logs/trades/: TEST_SESSION_20260323.csv
scripts/: dev_maintainability.ps1  dev_quality.ps1  dev_security.ps1  run_backtest.py  run_forward_test.py  run_live_trading.py
src/: __init__.py
src/backtesting/: backtrader_runner.py  vectorbt_runner.py  walk_forward.py
src/core/: __init__.py  events.py
src/dashboard/: app.py
src/data/: csv_loader.py  validators.py  yfinance_loader.py
src/forward_testing/: dhan_sandbox.py  runner.py
src/live_trading/: __init__.py  dhan_live.py
src/notifications/: __init__.py  trade_logger.py
src/portfolio/: __init__.py  state.py
src/risk/: risk_manager.py
src/strategies/: base_strategy.py
strategies/: __init__.py  intraday_momentum_strategy.py  sample_strategy.py  weapon_candle_system_strategy.py
strategies/eorb_strategy/: __init__.py  config.py  main.py  strategy.py
strategies/eorb_strategy/backtest/: __init__.py  engine.py  metrics.py
strategies/eorb_strategy/execution/: __init__.py  order.py  risk.py
strategies/eorb_strategy/indicators/: __init__.py  adx.py  ema.py  rvol.py  vwap.py
strategies/eorb_strategy/signals/: __init__.py  entry.py  orb_builder.py  scorer.py
strategies/eorb_strategy/utils/: __init__.py  time_filter.py
strategies/ichimoku_strategy/: __init__.py  config.py  ichimoku_strategy_spec.docx  main.py  strategy.py
strategies/ichimoku_strategy/backtest/: __init__.py  engine.py  metrics.py
strategies/ichimoku_strategy/data/: __init__.py  fetcher.py  preprocessor.py
strategies/ichimoku_strategy/execution/: __init__.py  order.py  risk.py
strategies/ichimoku_strategy/indicators/: __init__.py  atr.py  ema.py  ichimoku.py  rsi.py  vwap.py
strategies/ichimoku_strategy/signals/: __init__.py  layer1.py  layer1_trend.py  layer2.py  layer2_entry.py  layer3.py  layer3_confirm.py  scorer.py
strategies/weapon_candle/: __init__.py  config.py  main.py  weapon_candle_copilot_instructions.docx
tests/: test_backtest_smoke.py  test_llm_rl_optimizer.py  test_result_store.py  test_strategy_contract.py
tests/unit/: test_strategies.py
tools/: ichimoku_diagnostic.py  ichimoku_grid_2024.py
trading_system/: README.md  __init__.py
trading_system/backtest/: __init__.py  engine.py
trading_system/experiments/: __init__.py  store.py
trading_system/forwardtest/: __init__.py  engine.py
trading_system/live/: __init__.py  engine.py
trading_system/optimization/: __init__.py  llm_rl_optimizer.py
trading_system/shared/: __init__.py
(+36 files in other folders)
