[project]
name = "backtest-system"
version = "0.1.0"
description = "Professional algorithmic trading research and intraday backtesting system"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair<5",
    "backtrader>=1.9.78.123",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "plotly>=6.6.0",
    "pyarrow>=23.0.1",
    "pytz>=2026.1.post1",
    "streamlit>=1.19.0",
    "vectorbt>=0.28.2",
    "yfinance>=1.2.0",
]

[dependency-groups]
dev = [
    "mypy>=1.11.2",
    "pre-commit>=3.8.0",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "types-pytz",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
    ".github/skills/backtesting/assets/",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
]
ignore = [
    "E501",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q --disable-warnings"

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true
ignore_missing_imports = true
exclude = [
    "^data/",
    "^\\.venv/",
]
